Fixed background not fitted to render box

--- a/src/components/PolandMap/PolandMap.scss
+++ b/src/components/PolandMap/PolandMap.scss
@@ -28,7 +28,7 @@
 }
 .to-render--background-image{
     height: 700px;
-    width: 650px;
+    width: 100%;
     position: absolute;
     object-fit: cover;
     top: 0;
